--- a/srcs/requirements/bonus/website/public/index.html
+++ b/srcs/requirements/bonus/website/public/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>website</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      iframe {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <h1>hello docker</h1>
+    <iframe src="https://quirky-heyrovsky-9b8484.netlify.app/" title="description"></iframe>
   </body>
 </html>
